<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="197dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:orientation="vertical">

                <com.app.medcue.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:padding="5dp"
                    android:text="@string/title_medicine_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edit_med_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_med_name"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="210dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Type of Medicine"
                        android:textSize="20dp" />

                    <Spinner
                        android:id="@+id/spinner_dose_units"
                        style="@android:style/Widget.Spinner"
                        android:layout_width="220dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1"
                        android:dropDownWidth="wrap_content"
                        android:entries="@array/medications_shape_array"
                        android:gravity="center"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_marginTop="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:orientation="vertical">

                <com.app.medcue.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:padding="5dp"
                    android:text="@string/title_reminder"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:orientation="horizontal"
                    android:paddingTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Time"
                        android:textSize="20dp" />

                    <com.app.medcue.views.RobotoBoldTextView
                        android:id="@+id/tv_medicine_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_box"
                        android:gravity="center"
                        android:padding="@dimen/four_dp"
                        android:textColor="#4d4d4d"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        tools:text="23:30" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Doses"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/tv_dose_quantity"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_box"
                        android:gravity="center"
                        android:padding="@dimen/four_dp"
                        android:text="1"
                        android:textColor="#4d4d4d"
                        android:textSize="20dp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.app.medcue.views.RobotoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:padding="5dp"
                    android:text="@string/medicine_days"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    tools:ignore="MissingClass" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/every_day"
                    android:layout_width="152dp"
                    android:layout_height="58dp"
                    android:padding="10dp"
                    android:text="@string/every_day"
                    android:textColor="#4d4d4d"
                    android:textSize="20dp" />

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:orientation="horizontal"
                    android:paddingTop="7dp"
                    android:weightSum="7">

                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_sunday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Sun" />


                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_monday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Mon" />

                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_tuesday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Tue" />

                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_wednesday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Wed" />

                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_thursday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Thu" />

                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_friday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Fri" />


                    <com.app.medcue.views.DayViewCheckBox
                        android:id="@+id/dv_saturday"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="Sat" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>